--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+lecture_slides/~$03_Matzke_distance_traits_biogeog_v2.pptx
+~$workshop_notes.pptx
